--- a/style.css
+++ b/style.css
@@ -49,3 +49,19 @@
   width: 100vw;
   background-color: #f08a4b;
 }
+
+@media screen and (max-width: 1100px) {
+
+  #nav {
+      width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+
+  #nav {
+      width: 100%;
+  }
+
+}
