--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
   width: 100vw;
   background-color: #f08a4b;
 }
-
+ /* ************TABLET************ */
 @media screen and (max-width: 1100px) {
   #middle{
     flex-wrap: wrap;
@@ -71,7 +71,7 @@
     width: 50%;
   }
 }
-
+ /* ************PHONE************ */
 @media screen and (max-width: 700px) {
 
   #articles{
